deploy/k3s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: scene
  labels:
    app.kubernetes.io/part-of: scene
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
